<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5677"/>

    <RelativeLayout
        android:id="@+id/relativeLayoutBlanco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideLineBase">

        <ImageButton
            android:id="@+id/imageButtonAtras"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@color/transparente"

            android:layout_marginTop="31.51dp"
            android:layout_marginStart="31.48dp"
            android:padding="8dp"

            android:src="@drawable/ic_izq_fav"
            android:scaleType="centerCrop"
            android:tint="@color/negro"/>

        <TextView
            android:id="@+id/textViewTituloWhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"

            android:fontFamily="@font/gothamlight"
            android:text="@string/what_about"
            android:textSize="46dp"
            android:textColor="#606060"/>

        <TextView
            android:id="@+id/textViewTituloAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_below="@id/textViewTituloWhat"
            android:layout_marginTop="4dp"

            android:fontFamily="@font/font_gotham_bold"
            android:text="@string/aboutus_about"
            android:textColor="#606060"
            android:textSize="42dp"/>

        <ImageView
            android:id="@+id/imageViewIconCidNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_below="@id/textViewTituloAboutUs"
            android:layout_marginTop="35.53dp"

            android:src="@drawable/ic_cidnews"
            android:scaleType="centerCrop"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutAzul"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#1496C0"

        app:layout_constraintTop_toTopOf="@id/guideLineBase"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewTituloCidNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="49.07dp"

            android:fontFamily="@font/gothamblack"
            android:text="@string/cidnews_about"
            android:textColor="#FFFFFF"
            android:textSize="25.5dp"/>

        <TextView
            android:id="@+id/textViewTituloDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_below="@id/textViewTituloCidNews"
            android:layout_marginTop="30.50dp"

            android:fontFamily="@font/helveticabold"
            android:text="@string/cidnews_description_about"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>